--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -91,8 +91,7 @@ header {
 
         .menu-links {
           display: none;
-          align-items: center;
-          // padding: 1.2rem 0 1.5rem 0;
+          align-items: flex-start; 
 
           .menu-link {
             padding: 2.5rem 1.2rem;
@@ -171,10 +170,10 @@ header {
     }
 
     @include minWidth($breakpoint-desktop) {
-      align-items: flex-start;
       padding: 0 10rem;
-
+      
       #top-strip {
+        align-items: flex-start;
         padding: 0 0 0.8rem 0;
       }
     }
@@ -214,6 +213,8 @@ header {
     .mask {
       .auth-container {
         width: 90vw;
+        max-height: 90vh;
+        overflow: scroll;
 
         @include minWidth($breakpoint-tablet) {
           width: 50vw;
