--- a/styles/contact.css
+++ b/styles/contact.css
@@ -111,9 +111,9 @@ header #top-strip-container #top-strip #navigation-wrapper {
 
 header #top-strip-container #top-strip #navigation-wrapper .menu-links {
   display: none;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 header #top-strip-container #top-strip #navigation-wrapper .menu-links .menu-link {
@@ -203,12 +203,12 @@ header #top-strip-container #top-strip #navigation-wrapper .extra-menu-links-wra
 
 @media screen and (min-width: 1024px) {
   header #top-strip-container {
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
     padding: 0 10rem;
   }
   header #top-strip-container #top-strip {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     padding: 0 0 0.8rem 0;
   }
 }
@@ -242,6 +242,8 @@ header #menu-wrapper .mobile-menu-container .mobile-menu-links .mobile-menu-link
 
 header #login-modal .mask .auth-container {
   width: 90vw;
+  max-height: 90vh;
+  overflow: scroll;
 }
 
 @media screen and (min-width: 760px) {
