--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -348,6 +348,7 @@ section.split-row {
 .modal {
   display: none;
   z-index: 10000;
+  position: relative;
 
   &.visible {
     display: flex;
@@ -358,23 +359,25 @@ section.split-row {
     width: 100%;
     background: $transluscent-black;
   }
+
+  .modal-close {
+    position: absolute;
+    padding: 0.5rem;
+    background: $secondary-color;
+    top: 1rem;
+    right: 1rem;
+    color: $white;
+    border-radius: 0.25rem;
+    cursor: pointer;
+  }
   
   .mask {
-    // padding-top: 9rem;
     width: 100%;
     height: 100%;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-  
-    @include minWidth($breakpoint-tablet) {
-      // padding: 10rem 0 0 0;
-    }
-  
-    @include minWidth($breakpoint-desktop) {
-      // padding: 6.7rem 0 0 0;
-    }
   
     .mask-close {
       right: 2rem;
