--- a/styles/about.css
+++ b/styles/about.css
@@ -993,6 +993,7 @@ section.split-row.reverse {
 .modal {
   display: none;
   z-index: 10000;
+  position: relative;
 }
 
 .modal.visible {
@@ -1005,6 +1006,17 @@ section.split-row.reverse {
   height: 100vh;
   width: 100%;
   background: rgba(16, 17, 20, 0.8);
+}
+
+.modal .modal-close {
+  position: absolute;
+  padding: 0.5rem;
+  background: #C8102E;
+  top: 1rem;
+  right: 1rem;
+  color: #fff;
+  border-radius: 0.25rem;
+  cursor: pointer;
 }
 
 .modal .mask {
